--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -33,3 +33,9 @@ spring.cloud.gateway.routes[6].uri=lb://Payment-service
 spring.cloud.gateway.routes[6].predicates=Path= /**
 
 ### add notification service
+
+#### configuring ssl for api gateway
+server.ssl.key-store=classpath:apigateway_keystore.p12
+server.ssl.key-store-password=eduloom123
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=selfsigned_apigateway_sslserver
